# agents

./: .gitignore  pyproject.toml
1_foundations/: 2_lab2 with ChatModel.ipynb  2_lab2.ipynb  3_lab3.ipynb  models.py
1_foundations/MyCode/: chat.py  chat_factory.py  models.py  schema_utils.py  test_docstring_safety.py  test_error_handling.py  test_schema_generation.py
